public/style/listaServidores.css
@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
}

body {
    min-height: 100vh;
    overflow: hidden;
}

main {
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
}

.barraPesquisa {
    display: flex;
    align-items: center;
}

a{
    text-decoration: none;
    color: rgba(58, 46, 93, 1);
}

a:hover{
    text-decoration: underline;
}

.container {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  height: 100vh;
  background-color: #F9FAFB;
  gap: 5%;
  overflow: auto;
}

input {
    padding: 11px;
    border-radius: 10px;
    margin-left: 7px;
    margin-right: 7px;
    width: 30vh;
    background-color: rgba(238, 238, 238, 1);
    border: 1px solid rgb(175, 175, 175);
}

button {
    padding: 8px;
    width: 10vh;
    background-color: rgba(58, 46, 93, 1);
    color: white;
    border-radius: 12px;
    font-size: 16px;
    cursor: pointer;
    border: none;
}

.header-titulo{
    margin-left: 50px;
}
.header-titulo hr {
    width: 97%;
    border:1px solid rgba(238, 238, 238, 1);
}
.titulo{
    display: flex;
}
.titulo h1 {
    color: #3A2E5D;
    font-size: 60px;
}
.alerta-popup {
  position: fixed; 
  top: 20px; 
  right: 30px; 
  background-color: red;
  width: auto;
  padding: 0 20px;
  align-items: center;
  display: flex;
  justify-content: center;
  border-radius: 12px;
  height: 36px;
}

.alerta-popup i {
    font-size: 30px;
    color: white;
    margin-right: 15px;
}
.alerta-popup span{
    font-size: 30px;
    color: white;
    font-weight: bold;
}
.lista-maquina{
    display: flex;
    flex-direction: column;
    align-self: center;
    align-items: center;
    background-color: rgba(254, 253, 255, 1);
    border: 3px solid rgb(232, 230, 234);
    width: 90%;
    border-radius: 12px;    
}
.lista-maquina h2{
    margin-left: 30px;
    color: rgba(58, 46, 93, 1);
}
.tabela-maquina{
    border-radius: 12px;
    background-color: rgba(254, 253, 255, 1);
    border: 3px solid rgb(232, 230, 234);
}
.tabela-colunas{
    /* margin-left: 30px; */
    /* margin-top: 30px; */
    width: 100%;
    height: auto;
    display: flex;
    color: rgba(58, 46, 93, 1);
}
.circle-yellow{
    color: yellow;
    background-color: yellow;
    border-radius: 10px;
}
.circle-red{
    color: red;
    background-color: red;
    border-radius: 10px;
}
thead th,
tbody td {
  padding: 1rem 2rem;
  border-bottom: 1px solid #ddd;
  vertical-align: middle;
  text-align: center;
  color: rgba(58, 46, 93, 1);
}

thead th {
  background-color: #f9f9f9;
  vertical-align: middle;
  font-weight: bold;
}

.paginacao {
    display: flex;
    justify-content: center;
    gap: 6px;
    margin-bottom: 15px;
    flex-wrap: wrap;
    align-items: center;
  }
  
.paginacao .page,
.paginacao .next,
.paginacao .disabled {
  padding: 6px 12px;
  border-radius: 8px;
  cursor: pointer;
}

.paginacao .active {
  background-color: rgba(86, 64, 140, 1);
  color: white;
  font-weight: bold;
}
.paginacao .dots {
  padding: 6px 8px;
}

@media screen and (min-width: 1440px) {
    .container {
      max-width: 1600px;
    }
  
    .titulo h1 {
      font-size: 70px;
    }
  
    .alerta-popup {
      margin-left: 50px;
      width: auto;
      padding: 0 20px;
    }
  
    .tabela-colunas {
      justify-content: center;
    }
}
@media screen and (max-width: 1440px) {

  thead th,
  tbody td {
    padding: 1.5rem;
  }
}

@media (max-width: 1700px) {
  main {
    justify-content: start;
  }

  .barraPesquisa {
    flex-direction: column;
    align-items: start;
  }
}

